# bluestasis-apocrypha

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Engine/Chapter/: Chapter.cpp  Chapter.h
Engine/Option/: Option.cpp  Option.h
Engine/Screen/: Screen.cpp  Screen.h  ScreenLoader.cpp  ScreenLoader.h  ScreenUtils.h
GameState/: GameState_v1.cpp  GameState_v1.h  IGameState.cpp  IGameState.h
GameState/Save/: SaveEntry.cpp  SaveEntry.h
data/: screens_1.json
